View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023062 | Open CASCADE | OCCT:DRAW | public | 2012-04-03 12:43 | 2019-09-04 23:49 |
Reporter | epa | Assigned To | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.3.1 | ||||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023062: Incorrect display of edge in draw axo viewer | ||||
Description | Incorrect display of edge in draw axo viewer | ||||
Steps To Reproduce | - display attached edge in draw(restore ...; axo; fit) Complete circle is displayed - explode it on vertices - display it is View3D(vdisplay a) Result in draw axo view is not correct | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis bug23062 | ||||
|
ProblemWire.brep (63,593 bytes) |
|
Periodic curves were handled incorrect, it was fixed. Git branch CR23062 is ready to be reviewed. Dear GKA, Please review. |
|
Branch CR23062 is ready to test |
|
Dear BugMaster, Branch CR23062 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Regressions: Not detected Improvements: Not detected Testing cases: bugs vis bug23062 - OK. |
occt: master f34eec8f 2013-01-25 10:49:08
|
0023062: Incorrect display of edge in draw axo viewer Update first and last parameters of intervals, because they should be at same period like other values. |
Affected Issues 0023062 |
|
mod - src/GeomAdaptor/GeomAdaptor_Curve.cxx | Diff File | ||
mod - tests/bugs/end | Diff File | ||
add - tests/bugs/vis/bug23062 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-04-03 12:43 | epa | New Issue | |
2012-04-03 12:43 | epa | Assigned To | => mkv |
2012-04-03 12:43 | epa | File Added: ProblemWire.brep | |
2012-04-03 12:43 | epa | Assigned To | mkv => abv |
2012-04-03 15:17 | kgv | Product Version | => 6.3.1 |
2012-04-03 15:17 | kgv | Target Version | => 6.5.4 |
2012-10-18 12:58 | abv | Assigned To | abv => ika |
2012-10-20 10:43 | abv | Status | new => assigned |
2012-10-23 18:41 | abv | Target Version | 6.5.4 => 6.6.0 |
2012-12-28 16:18 |
|
Note Added: 0022884 | |
2012-12-28 16:18 |
|
Assigned To | ika => gka |
2012-12-28 16:18 |
|
Status | assigned => resolved |
2012-12-29 16:29 | gka | Note Added: 0022891 | |
2012-12-29 16:29 | gka | Status | resolved => reviewed |
2013-01-11 19:11 |
|
Assigned To | gka => mkv |
2013-01-23 17:34 |
|
Note Added: 0023097 | |
2013-01-23 17:34 |
|
Test case number | => bugs vis bug23062 |
2013-01-23 17:34 |
|
Assigned To | mkv => bugmaster |
2013-01-23 17:34 |
|
Status | reviewed => tested |
2013-01-28 18:06 |
|
Changeset attached | => occt master f34eec8f |
2013-01-28 18:07 |
|
Assigned To | bugmaster => ika |
2013-01-28 18:07 |
|
Status | tested => verified |
2013-01-28 18:07 |
|
Resolution | open => fixed |
2013-04-23 13:36 |
|
Status | verified => closed |
2013-04-29 15:21 |
|
Fixed in Version | => 6.6.0 |
2019-09-04 23:49 | kgv | Relationship added | parent of 0028144 |