0023062: Incorrect display of edge in draw axo viewer

Update first and last parameters of intervals, because they should be at same period like other values.